<resources>
    <string name="app_name">CleanFizz</string>
    <string name="word_one">Mot 1</string>
    <string name="word_two">Mot 2</string>
    <string name="word">mot</string>
    <string name="number_one">Nombre 1</string>
    <string name="number_two">Nombre 2</string>
    <string name="number">nombre</string>
    <string name="limit">LIMITE</string>
    <string name="validate">VALIDER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>