<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/word_one_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/word_one"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/word_two_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/word_one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="text"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:gravity="center"
            android:hint="@string/word"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/word_one_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/word_one_title"
            app:layout_constraintTop_toTopOf="@+id/word_one_title" />

        <TextView
            android:id="@+id/word_two_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_two"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/number_one_title"
            app:layout_constraintStart_toStartOf="@+id/word_one_title"
            app:layout_constraintTop_toBottomOf="@+id/word_one_title" />

        <EditText
            android:id="@+id/word_two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:inputType="text"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:gravity="center"
            android:hint="@string/word"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/word_two_title"
            app:layout_constraintEnd_toEndOf="@+id/word_one"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/word_two_title"
            app:layout_constraintTop_toTopOf="@+id/word_two_title" />

        <TextView
            android:id="@+id/number_one_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_one"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/number_two_title"
            app:layout_constraintStart_toStartOf="@+id/word_two_title"
            app:layout_constraintTop_toBottomOf="@+id/word_two_title" />

        <EditText
            android:id="@+id/number_one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:hint="@string/number"
            android:inputType="number"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/number_one_title"
            app:layout_constraintEnd_toEndOf="@+id/word_two"
            app:layout_constraintStart_toEndOf="@+id/number_one_title"
            app:layout_constraintTop_toTopOf="@+id/number_one_title" />

        <TextView
            android:id="@+id/number_two_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_two"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/limit"
            app:layout_constraintEnd_toEndOf="@+id/number_one_title"
            app:layout_constraintStart_toStartOf="@+id/number_one_title"
            app:layout_constraintTop_toBottomOf="@+id/number_one_title" />

        <EditText
            android:id="@+id/number_two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:hint="@string/number"
            android:inputType="number"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/number_two_title"
            app:layout_constraintEnd_toEndOf="@+id/word_one"
            app:layout_constraintStart_toEndOf="@+id/number_two_title"
            app:layout_constraintTop_toTopOf="@+id/number_two_title" />

        <TextView
            android:id="@+id/limit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/limit"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/validate"
            app:layout_constraintStart_toStartOf="@+id/number_two_title"
            app:layout_constraintTop_toBottomOf="@+id/number_two_title" />

        <EditText
            android:id="@+id/limit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:hint="@string/number"
            android:inputType="number"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/limit_title"
            app:layout_constraintEnd_toEndOf="@+id/number_two"
            app:layout_constraintStart_toEndOf="@+id/limit_title"
            app:layout_constraintTop_toTopOf="@+id/limit_title" />

        <Button
            android:id="@+id/validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/limit_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>